2024-01-15_kubernetes_generali/kubernetes-training/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ondrejsika3
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
