2024-01-15_kubernetes_generali/kubernetes-training/02_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: multi-container-pod
    svc: example
spec:
  terminationGracePeriodSeconds: 10
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: nginx
      image: ttl.sh/nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      resources:
        requests:
          memory: 30Mi
          cpu: 30m
        limits:
          memory: 50Mi
          cpu: 30m
    - name: date
      image: ttl.sh/debian
      volumeMounts:
        - name: html
          mountPath: /html
      command: ["/bin/sh", "-c"]
      args:
        - while true; do
          date | tee /html/index.html.tmp;
          mv /html/index.html.tmp /html/index.html;
          sleep 1;
          done
      resources:
        requests:
          memory: 30Mi
          cpu: 10m
        limits:
          memory: 200Mi
          cpu: 200m
