2024-01-15_kubernetes_generali/kubernetes-training/04_01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  revisionHistoryLimit: 0
  replicas: 6
  strategy:
  #   type: RollingUpdate
    type: Recreate
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        svc: example
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - hello-world
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: main
          image: ondrejsika/training-example:yellow
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
