2024-01-15_kubernetes_generali/kubernetes-training/statefulset25_1.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-world-sts
spec:
  selector:
    matchLabels:
      app: hello-world-sts
  replicas: 5
  template:
    metadata:
      labels:
        app: hello-world-sts
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example:green
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
