2024-01-15_kubernetes_generali/kubernetes-training/topology_spread_constraints.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-spread-constraints
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: topology-spread-constraints
  replicas: 20
  template:
    metadata:
      labels:
        app: topology-spread-constraints
    spec:
      # topologySpreadConstraints:
      #   - maxSkew: 1
      #     topologyKey: topology.kubernetes.io/zone
      #     whenUnsatisfiable: ScheduleAnyway
      #     labelSelector:
      #       matchLabels:
      #         app: topology-spread-constraints
      containers:
        - name: main
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
