2024-01-15_kubernetes_generali/kubernetes-training/nodeport_redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - port: 6379
