2024-01-15_kubernetes_generali/kubernetes-training/pvc_mount_example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-mount-example
spec:
  replicas: 6
  selector:
    matchLabels:
      app: pvc-mount-example
  template:
    metadata:
      labels:
        app: pvc-mount-example
        svc: example
    spec:
      volumes:
        - name: data
          nfs:
            server: nfs.sikademo.com
            path: /nfs
      containers:
        - name: nginx
          image: sikalabs/nginx-public
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: pvc-mount-example
spec:
  type: ClusterIP
  selector:
    app: pvc-mount-example
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
