2024-01-15_kubernetes_generali/kubernetes-training/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    svc: example
  ports:
    - port: 80
      targetPort: http
